--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   background-color: #f9f9f9;
   margin: 0;
   padding: 0;
-  box-sizing: border-box; /* Ensure padding and margin don't affect width/height calculations */
+  box-sizing: border-box;
 }
 
 header {
@@ -12,7 +12,6 @@ header {
   color: white;
   padding: 10px;
   text-align: center;
-  font-size: 1em;
 }
 
 #quiz-container {
@@ -109,7 +108,7 @@ header {
 #restart-btn-container {
   text-align: center;
   margin-top: 20px;
-  display: none; /* Initially hidden */
+  display: none;
 }
 
 #restart-btn-container button {
