--- a/style.css
+++ b/style.css
@@ -24,8 +24,14 @@ header {
 .header-subtitle {
   font-size: 1.2em;
   font-weight: 300;
-  margin-top: 10px;
+  margin-top: 5px;
   opacity: 0.8;
+}
+
+
+.category-info{
+  font-size: 1.5em;
+  margin: 0;
 }
 
 /* Category Section */
